--- a/index.html
+++ b/index.html
@@ -4,8 +4,35 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>portodaz</title>
+    <link rel="stylesheet" href="style.css" />
+    <link rel="icon" href="img/logos.png" />
 </head>
-<body>
-    
 </body>
 </html>
+<!-- Bagian Navigasi -->
+<header>
+        <nav>
+          <div class="logo">my<span>Porto</span></div>
+          <ul>
+            <li><a href="#home">Home</a></li>
+            <li><a href="#about">About</a></li>
+            <li><a href="#proyek">Proyek</a></li>
+            <li><a href="#medsos">Medsos</a></li>
+          </ul>
+        </nav>
+      </header>
+      <!-- Bagian Home -->
+<section id="home" class="hero">
+        <div class="hero-content">
+          <p>Hi, Welcome to My Website</p>
+          <h1>Adeveloper</h1>
+          <p>
+            Website ini merupakan website portofolio saya yang merupakan deskripsi
+            singkat tentang saya.
+          </p>
+          <a href="#about" class="btn-hero">About Me</a>
+        </div>
+        <div class="hero-logo">
+          <img src="img/mylogo.png" alt="Adeveloper" />
+        </div>
+      </section>
