--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
     <section id="home" class="hero">
         <div class="hero-content">
             <p>Hi, Welcome to My Website</p>
-            <h1>Adeveloper</h1>
+            <h1>dandi</h1>
             <p>
                 Website ini merupakan website portofolio saya yang merupakan deskripsi
                 singkat tentang saya.
@@ -32,7 +32,7 @@
             <a href="#about" class="btn-hero">About Me</a>
         </div>
         <div class="hero-logo">
-            <img src="img/mylogo.png" alt="Adeveloper" />
+            <img src="WhatsApp Image 2026-02-09 at 14.28.46 (1).jpeg" alt="dandibagas" />
         </div>
     </section>
 
@@ -62,48 +62,48 @@
     <section id="proyek" class="container bg-light proyek">
         <h2>Proyek Saya</h2>
         <div class="proyek-grid">
-            <a href="#" target="_blank" class="proyek-card">
-                <img src="img/project.png" alt="ExcelProject" />
+            <a href="https://drive.google.com/file/d/198vW01_a7eOTs8vo-eJg9VZORugkf9yn/view?usp=drive_link" target="_blank" class="proyek-card">
+                <img src="project1.png" alt="ExcelProject" />
                 <div class="proyek-info">
                     <h3>Excel</h3>
                     <p>My Excel Project</p>
                 </div>
             </a>
 
-            <a href="#" target="_blank" class="proyek-card">
-                <img src="img/project.png" alt="ArduinoLed" />
+            <a href="https://www.tinkercad.com/things/iu9Qv6jO7ee-terrific-juttuli" target="_blank" class="proyek-card">
+                <img src="project1.png" alt="ArduinoLed" />
                 <div class="proyek-info">
                     <h3>ArduinoLED</h3>
                     <p>Arduino LED Control Project</p>
                 </div>
             </a>
 
-            <a href="#" target="_blank" class="proyek-card">
-                <img src="img/project.png" alt="ArduinoLyric" />
+            <a href="https://www.tinkercad.com/things/2dkK3mmvhyP-projek-lcd?sharecode=U2b_GEFrHhoAgYLUIQtHe1WLW3vQIOzCa7z5u2SsOcc" target="_blank" class="proyek-card">
+                <img src="project1.png" alt="ArduinoLyric" />
                 <div class="proyek-info">
                     <h3>Arduino Lirik</h3>
                     <p>Arduino Lyric Display Project</p>
                 </div>
             </a>
 
-            <a href="#" target="_blank" class="proyek-card">
-                <img src="img/project.png" alt="Flowchart Project" />
+            <a href="https://drive.google.com/file/d/1AmJmifKMs_7lxQmLvO1jDOCbuYKc9cwo/view?usp=drive_link" target="_blank" class="proyek-card">
+                <img src="project1.png" alt="Flowchart Project" />
                 <div class="proyek-info">
                     <h3>Flowchart</h3>
                     <p>My Flowchart Project</p>
                 </div>
             </a>
 
-            <a href="#" target="_blank" class="proyek-card">
-                <img src="img/project.png" alt="Website Project" />
+            <a href="https://dazz1508.github.io/portofolio-001/" target="_blank" class="proyek-card">
+                <img src="project1.png" alt="Website Project" />
                 <div class="proyek-info">
                     <h3>Website Sederhana</h3>
                     <p>My Website Project</p>
                 </div>
             </a>
 
-            <a href="#" target="_blank" class="proyek-card">
-                <img src="img/project.png" alt="PSAJ Project" />
+            <a href="https://dazz1508.github.io/psaj_kel005/" target="_blank" class="proyek-card">
+                <img src="project1.png" alt="PSAJ Project" />
                 <div class="proyek-info">
                     <h3>Website PSAJ</h3>
                     <p>Website PSAJ Non Tulis</p>
@@ -115,30 +115,30 @@
     <section id="medsos" class="container medsos">
         <h2>Media Sosial</h2>
         <div class="medsos-list">
-            <a href="https://github.com/username" target="_blank" class="medsos-item">
-                <img src="img/gbr_github.png" alt="GitHub" />
+            <a href="https://github.com/dazz1508" target="_blank" class="medsos-item">
+                <img src="gbr_github.png" alt="GitHub" />
                 <span>Github</span>
             </a>
 
             <a href="https://instagram.com/username" target="_blank" class="medsos-item">
-                <img src="img/gbr_ig.png" alt="Instagram" />
+                <img src="gbr_ig.png" alt="Instagram" />
                 <span>Instagram</span>
             </a>
 
             <a href="https://tiktok.com/username" target="_blank" class="medsos-item">
-                <img src="img/gbr_tiktok.png" alt="TikTok" />
+                <img src="gbr_tiktok.png" alt="TikTok" />
                 <span>TikTok</span>
             </a>
 
             <a href="https://linkedin.com/in/username" target="_blank" class="medsos-item">
-                <img src="img/gbr_linkedin.png" alt="LinkedIn" />
+                <img src="gbr_linkedin.png" alt="LinkedIn" />
                 <span>LinkedIn</span>
             </a>
         </div>
     </section>
 
     <footer>
-        <p>© 2026 AdeveloperProject</p>
+        <p>© 2026 dandibagasprojek</p>
     </footer>
 
 </body>
